Fix a bug on firefox
Fix firefox bug of not opening result pane. Event propogation was not
correctly added in the JS

--- a/ziyard/11-2-2016/map/css/main.css
+++ b/ziyard/11-2-2016/map/css/main.css
@@ -206,7 +206,7 @@ a:hover {
 .input-box {
   border: #5e7e8b 1px solid;
   width: 100%;
-  min-height: 30px;
+  height: 30px;
   padding: 0 10px;
   color: #012e55;
   outline: none;
@@ -240,6 +240,11 @@ a:hover {
   border-radius: 2px;
   cursor: pointer;
   width: 100%;
+}
+
+input.button {
+  padding-top: 0;
+  padding-bottom: 0;
 }
 
 .button:hover {
